force-app/main/default/objects/AccountBypass__c/AccountBypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Bypass VR, WFR and Triggers for Account</description>
    <label>AccountBypass</label>
</CustomObject>