force-app/main/default/objects/AccountBypass__c/fields/ValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValidationRule</label>
    <type>Checkbox</type>
</CustomField>