force-app/main/default/objects/AccountBypass__c/fields/WorkflowRule__c.field-meta.xml
<CustomField>
    <fullName>WorkflowRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkflowRule</label>
    <type>Checkbox</type>
</CustomField>